# ML

./: README.md
caffe_test/: CMakeLists.txt  caffe_test.cpp  readme.md
caffe_test/model/: lenet_RM_test.prototxt  lenet_iter_10000.caffemodel
svm_test/: CMakeLists.txt  readme.md  svm_test.cpp
svm_test/digits/get_data/: CMakeLists.txt  get_data.cpp
svm_test/digits/model/: digits.xml
svm_test/digits/test_data/: CMakeLists.txt  test_data.cpp
svm_test/digits/train_data/: CMakeLists.txt  train_data.cpp
svm_test/svm_train/: CMakeLists.txt  svm_train.cpp
